--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 	<title>Slide Game</title>
 
 	<!-- JQuerry 3 -->
-	<script
-	  src="https://code.jquery.com/jquery-3.2.1.min.js"
-	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-	  crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- Local External JS -->
 	<script src="main.js" type="text/javascript"></script>
