--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<title>Slide Game</title>
 
 	<!-- JQuerry 3 -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 	<!-- Local External CSS -->
 	<link rel="stylesheet" type="text/css" media="all" href="./css/style.css">
 
 	<!-- Local External JS -->
-	<script src="main.js" type="text/javascript"></script>
+	<script async src="main.js" type="text/javascript"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 </head>
 
 <body>
