--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" media="all" href="./css/style.css">
 
 	<!-- Local External JS -->
-	<script async src="main.js" type="text/javascript"></script>
+	<script src="main.js" type="text/javascript"></script>
 
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 </head>
