added basic style in the main gallery

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
+<!doctype html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Classic games made with vanillia</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js">
+
+	<!-- Compressed CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" crossorigin="anonymous" />
+	<link rel="stylesheet" href="style.css" crossorigin="anonymous" />
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Compressed JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<ul>
-		<li><a href="flipgame/index.html" target="_blank">Flipper</a></li>
-		<li><a href="memory/index.html" target="_blank">Memory</a></li>
-	</ul>
+	<div id="title"><h1>Classic Games</h1></div>
+	<div id="gallery">
+		<ul class="main-list">
+			<li><a href="flipgame/index.html" target="_blank">Flipper</a></li>
+			<li><a href="memory/index.html" target="_blank">Memory</a></li>
+		</ul>
+	</div>
+</ul>
 </body>
 </html>
